--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,35 @@
 
     <groupId>com.github.lucasfsousa</groupId>
     <artifactId>pricetag</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>pricetag</name>
+    <description>Library to get price tag from some stores</description>
     <url>https://github.com/lucasfsousa/pricetag</url>
+
+    <licenses>
+        <license>
+            <name>The MIT License (MIT)</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>lucasfsousa</id>
+            <name>Lucas Felix de Sousa</name>
+            <email>lucasfsousa@gmail.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/lucasfsousa/pricetag.git</connection>
+        <developerConnection>scm:git:git@github.com:lucasfsousa/pricetag.git</developerConnection>
+        <url>https://github.com/lucasfsousa/pricetag</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
